--- a/client/src/components/header/header-li-item/HeaderLiItem.module.css
+++ b/client/src/components/header/header-li-item/HeaderLiItem.module.css
@@ -1,16 +1,16 @@
 .liItem {
     list-style: none;
-    margin-right: 1em;
     padding: 0.3em 0.3em 0
 }
 
 .liItem a {
     color: #ec2e2e;
     text-decoration: none;
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: 600;
     display: inline-block;
     transition: transform 0.3s ease;   
+    white-space: nowrap;
 }
 
 .liItem a:hover {
